--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -1,8 +1,15 @@
 .blabla-collections {
-    margin:12px;
+    margin:auto;
+    width:90%;
+    height:100vh
+
 }
 .blabla-collections h2{
-    font-size: 28px;;
+    font-size: 36px;
+    width:30%;
+    margin:auto;
+    margin-top:24px;
+    border-bottom: 2px solid #8a8cc0;
     text-align: center;
 }
 
