--- a/src/styles/collections.css
+++ b/src/styles/collections.css
@@ -1,10 +1,10 @@
-.blabla-collections {
+.blabla-collection-display {
+    display: flex column;
     margin:auto;
     width:90%;
-    height:100vh
 
 }
-.blabla-collections h2{
+.blabla-collection-display h2{
     font-size: 36px;
     width:30%;
     margin:auto;
@@ -13,7 +13,15 @@
     text-align: center;
 }
 
-.blabla-item {
+.blabla-collection {
+    list-style-type: none;
+    padding: 32px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* .blabla-item {
     display: flex column;
     justify-content: space-around;
     margin:12px;
@@ -24,3 +32,7 @@
     color:grey;
     line-height: 4px;
 }
+
+.blabla-item img {
+    width:30%;
+} */
