--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,20 @@
 
 a:hover {
   color:#8a8cc0;
+  cursor: pointer;
+}
+
+.blabla-collections {
+  margin:auto;
+  width:90%;
+  height:100vh
+
+}
+.blabla-collections h2{
+  font-size: 36px;
+  width:30%;
+  margin:auto;
+  margin-top:24px;
+  border-bottom: 2px solid #8a8cc0;
+  text-align: center;
 }
